@@ -95,17 +95,19 @@
 
 /* Valid channel addresses:
  */
-#define CADDRTAB    {                           \
-    { 00000, "" },                              \
-    { 44470, "00,01,02,03,04,05,06,07,08,09" }, \
-    { 44471, "00,01,02,03,04,05,06,07,08,09" }, \
-    { 44472, "00,01,02,03,10,11,12,13" },       \
-    { 44473, "00,01,02,03,10,11,12,13,20,21,22,23,30,31,32,33" }, \
-    { 44474, "00,01,02,03,04,05,06,07,08,09,10,11,12,13,14,15" }, \
-    { 44475, "" },                              \
-    { 44476, "00,01,02,03" },                   \
-    { 44477, "00,01,02,03,04,05,06" },          \
-    { 44478, "00,01,02,03,10,11,12,13" },       \
+#define CADDRTAB    {                                                   \
+    { 00000, "empty slot", NULL },                                      \
+    { 44470, "relay multiplexer", "00,01,02,03,04,05,06,07,08,09" },    \
+    { 44471, "general purpose relay", "00,01,02,03,04,05,06,07,08,09" },\
+    { 44472, "dual 4-1 VHF switch", "00,01,02,03,10,11,12,13" },        \
+    { 44473, "4x4 matrix switch",                                       \
+             "00,01,02,03,10,11,12,13,20,21,22,23,30,31,32,33" },       \
+    { 44474, "digital I/O",                                             \
+             "00,01,02,03,04,05,06,07,08,09,10,11,12,13,14,15" },       \
+    { 44475, "breadboard", NULL },                                      \
+    { 44476, "microwave switch", "00,01,02,03" },                       \
+    { 44477, "form C relay", "00,01,02,03,04,05,06" },                  \
+    { 44478, "1.3GHz multiplexer", "00,01,02,03,10,11,12,13" },         \
 }
 
 /*
